<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_burgers"
            android:icon="@drawable/ic_menu_burger"
            android:title="@string/burgers" />
        <item
            android:id="@+id/nav_snacks"
            android:icon="@drawable/ic_menu_snacks"
            android:title="@string/snacks" />
        <item
            android:id="@+id/nav_drinks"
            android:icon="@drawable/ic_menu_drinks"
            android:title="@string/drinks" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_signin"
            android:icon="@drawable/ic_menu_signin"
            android:title="@string/sign_in" />
    </group>
</menu>
